--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
-    id 'net.neoforged.moddev' version '1.0.20'
+    id 'net.neoforged.moddev'
+    id 'dev.enginecrafter77.gitversion'
 }
 
 tasks.named('wrapper', Wrapper).configure {
@@ -13,7 +14,6 @@ tasks.named('wrapper', Wrapper).configure {
     distributionType = Wrapper.DistributionType.BIN
 }
 
-version = mod_version
 group = mod_group_id
 
 repositories {
@@ -147,7 +147,7 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             mod_id                 : mod_id,
             mod_name               : mod_name,
             mod_license            : mod_license,
-            mod_version            : mod_version,
+            mod_version            : project.version.toString(),
             mod_authors            : mod_authors,
             mod_description        : mod_description
     ]
