--- a/build.gradle
+++ b/build.gradle
@@ -147,7 +147,7 @@ var generateModMetadata = tasks.register("generateModMetadata", ProcessResources
             mod_id                 : mod_id,
             mod_name               : mod_name,
             mod_license            : mod_license,
-            mod_version            : project.version.asString(),
+            mod_version            : project.version.toString(),
             mod_authors            : mod_authors,
             mod_description        : mod_description
     ]
