--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,14 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
+    jarJar(implementation('org.codehaus.groovy:groovy')){
+        version {
+            strictly '[3.0.0,)'
+            prefer '3.0.24'
+        }
+    }
+    additionalRuntimeClasspath 'org.codehaus.groovy:groovy:3.0.24'
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
